--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://gitlab.com/geralexndr/Maibax#README",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "ion-rangeslider": "^2.2.0",
     "jquery": "^3.3.1",
     "slick-carousel": "^1.8.1"
   }
