--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://gitlab.com/geralexndr/Maibax#README",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "draft-js": "^0.10.5",
     "ion-rangeslider": "^2.2.0",
     "jquery": "^3.3.1",
+    "rc-editor-core": "^0.8.7",
     "slick-carousel": "^1.8.1"
   }
 }
